@@ -22,8 +22,8 @@ import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.apache.gora.examples.WebPageDataCreator;
 import org.apache.gora.examples.generated.TokenDatum;
 import org.apache.gora.examples.generated.WebPage;
@@ -36,7 +36,7 @@ import org.junit.Assert;
 
 public class MapReduceTestUtils {
 
-  private static final Log log = LogFactory.getLog(MapReduceTestUtils.class);
+  private static final Logger log = LoggerFactory.getLogger(MapReduceTestUtils.class);
   
   /** Tests by running the {@link QueryCounter} mapreduce job */
   public static void testCountQuery(DataStore<String, WebPage> dataStore
